clang/test/BSC/Negative/Generic/borrow_template_type_parameter/borrow_template_type_parameter.cbs
// RUN: %clang_cc1 -verify -fsyntax-only %s

// Test with multiple template parameters
_Safe T2 _Borrow convert<T1, T2, T3>(T1 _Borrow a, T3 _Borrow b) {
  return _Unsafe((T2 _Borrow)(T2)(T1)a);
}

_Safe int main(void) {
  int x = 42;
  int * _Borrow ptr = &_Mut x;

  // Test convert function - template params are int*, _Borrow is added by function signature
  int *_Borrow p3 = convert<int *, int *, int *>(ptr, ptr); // expected-error {{cannot use `ptr` because it was mutably borrowed}}
                                                           // expected-error@-1 {{cannot borrow `*ptr` as mutable more than once at a time}}
                                                           // expected-note@-2 {{`*ptr` is borrowed here}}
                                                           // expected-note@-3 {{first mut borrow occurs here}}
  if (*p3 != 42) {
    return 3;
  }

  return 0;
}